--- a/assets/scss/general/_buttons.scss
+++ b/assets/scss/general/_buttons.scss
@@ -18,7 +18,7 @@ input[type="button"] {
 	cursor: pointer;
     height: $input-height;
 
-	@include breakpoint($small) {
+	@include breakpoint($smallOnly) {
 		width: 100%;
 	}
 
