Updated image filters

--- a/assets/scss/general/_forms-elements.scss
+++ b/assets/scss/general/_forms-elements.scss
@@ -23,6 +23,7 @@ select {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+	border-radius: 0;
 
 	// style placeholder
 	&::-webkit-input-placeholder {
