--- a/assets/scss/general/_forms-elements.scss
+++ b/assets/scss/general/_forms-elements.scss
@@ -26,7 +26,7 @@ select {
 	border-radius: 0;
 
 	// style placeholder
-	&::-webkit-input-placeholder {
+	@mixin input-placeholder {
 		color: $light;
 		font-family: 'FontAwesome', $body-font-family;
 		font-size: 13px;
@@ -34,9 +34,8 @@ select {
 		padding: 0;
 		top: 0px;
 		transition: all, 250ms, ease-in;
-		z-index: 10;
 		line-height: normal;
-		z-index: 10;
+		@include z-index(main);
 
 		// for safari only
 		@media only screen and (-webkit-min-device-pixel-ratio: 1) {
@@ -59,6 +58,7 @@ select {
 	}
 }
 
+// for focused elements
 input:not([type='checkbox']):not([type='radio']):not([type='button']):focus,
 select:focus,
 textarea:focus {
@@ -85,7 +85,6 @@ label {
 	margin-bottom: $small-space;
 	opacity: 0.6;
 }
-
 
 select {
 	min-height: $input-height;
