--- a/assets/scss/general/_mixins.scss
+++ b/assets/scss/general/_mixins.scss
@@ -1,20 +1,3 @@
-// @font-face {
-// 	font-family: 'Gotham-Light';
-// 	src: url('../fonts/Gotham/GothamHTF-Light.otf');
-// }
-// @font-face {
-// 	font-family: 'Gotham-Book';
-// 	src: url('../fonts/Gotham/GothamHTF-Book.otf');
-// }
-// @font-face {
-// 	font-family: 'Gotham-Bold';
-// 	src: url('../fonts/Gotham/GothamHTF-Bold.otf');
-// }
-// @font-face {
-// 	font-family: 'Gotham-Thin';
-// 	src: url('../fonts/Gotham/GothamHTF-Thin.otf');
-// }
-
 //button generators
 @mixin button-bg($bg, $txt) {
 	background: $bg;
@@ -74,13 +57,13 @@ $body-font-size: 14;
 // Headline
 @mixin heading {
 	color: inherit;
-    font-weight: 500;
+	font-weight: 500;
 	font-style: normal;
 	text-rendering: optimizeLegibility;
 	margin-top: 0;
 	margin-bottom: 0.5rem;
 	line-height: 1.4;
-    padding: 0;
+	padding: 0;
 }
 
 @mixin h1 {
@@ -131,7 +114,6 @@ $body-font-size: 14;
 	}
 }
 
-
 // set the standard for the pseufo code block
 @mixin pseudo($display: block, $pos: absolute, $content: ''){
 	content: $content;
@@ -176,3 +158,15 @@ $body-font-size: 14;
 		transition: visibility 1s, opacity 1s;
 	}
 }
+
+
+// z-indexes
+@function z-index($key) {
+	@return map-get($z-index, $key);
+}
+
+@mixin z-index($key) {
+	z-index: z-index($key);
+}
+
+// @include z-index(navigation);
