Removed all text decoration from buttons

--- a/assets/scss/general/_buttons.scss
+++ b/assets/scss/general/_buttons.scss
@@ -16,6 +16,7 @@ input[type="button"] {
 	justify-content: center;
 	font-weight: normal;
 	cursor: pointer;
+	text-decoration: none;
 	height: $input-height;
 
 	@include breakpoint($smallOnly) {
