--- a/assets/scss/general/_custom.scss
+++ b/assets/scss/general/_custom.scss
@@ -258,50 +258,87 @@ blockquote {
 	}
 }
 
+// align texts center
 .text-center {
 	text-align: center;
 }
-
+// .. left
 .text-left {
 	text-align: left;
 }
-
+// .. right
 .text-right {
 	text-align: right;
 }
 
-.middleAll {
-	align-items: center;
-	justify-content: center;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-}
 
-.align-middle {
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-	-ms-flex-align: center;
-	align-items: center;
-}
+// Columns in a flex grid can be aligned horizontal or vertical inside of their parent.
+	// within a container, align items visually center
+	.middle-all{
+		align-items: center;
+		justify-content: center;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
 
-.align-center {
-	-webkit-box-pack: center;
-	-webkit-justify-content: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-}
+	// within a container, align items in the middle
+	.align-middle {
+	    -webkit-box-align: center;
+	    -ms-flex-align: center;
+	    align-items: center;
+	}
 
-.horizontal-center {
-	position: absolute;
-	left: 50%;
-	top: auto;
-	transform: translatey(-50%);
-}
+	// within a container, align items in the center
+	.align-center {
+	    -webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	    justify-content: center;
+	}
 
-.vertical-center {
-	position: absolute;
-	left: auto;
-	top: 50%;
-	transform: translatex(-50%);
-}
+// Columns in a flex grid can be aligned horizontal or vertical individually also
+	// align a column within a row to the bottom
+	.align-self-bottom {
+	    -webkit-align-self: flex-end;
+	    -ms-flex-item-align: end;
+	    align-self: flex-end;
+	}
+
+	// align a column within a row to the middle
+	.align-self-middle {
+		-webkit-align-self: center;
+	    -ms-flex-item-align: center;
+	    align-self: center;
+	}
+
+	// align a column within a row to the top
+	.align-self-top {
+		-webkit-align-self: flex-start;
+		-ms-flex-item-align: start;
+		align-self: flex-start;
+	}
+
+// Elements can be absolutely positioned inside of it's relative parent
+	// Horizontally centers the element
+	.horizontal-center {
+		position: absolute;
+		left: 50%;
+		top: auto;
+		transform: translatey(-50%);
+	}
+
+	// Vertically centers the element
+	.vertical-center {
+		position: absolute;
+		left: auto;
+		top: 50%;
+		transform: translatex(-50%);
+	}
+
+	// Abolutely centers the element
+	.absolute-center {
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+	}
