Removed top calculation

--- a/assets/scss/general/_grid.scss
+++ b/assets/scss/general/_grid.scss
@@ -1,7 +1,7 @@
 // base variables
 $grid-gutter-medium: 30px !default;
 $grid-gutter-small: 20px !default;
-$global-width: rem-calc(1200px);
+$global-width: 1200px;
 $grid-max-width: $global-width + ($grid-gutter-medium * 2) !default;
 $grid-columns: 12 !default;
 
