Folder rename. Updated examples & Readme

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,5 +1,5 @@
 // general files
-@import 'general/index';
+@import 'base/index';
 
 // site specific
-@import 'specific/index';
+@import 'site/index';
