--- a/assets/scss/base/_custom.scss
+++ b/assets/scss/base/_custom.scss
@@ -274,20 +274,18 @@ blockquote {
 
 // Columns in a flex grid can be aligned horizontal or vertical inside of their parent.
 // within a container, align items visually center
-.middle-all{
+.align-all {
+	display: flex;
 	align-items: center;
 	justify-content: center;
-	display: flex;
 	flex-direction: column;
-	align-items: center;
+	text-align: center;
 }
 
-// within a container, align items in the middle
 .align-middle {
 	align-items: center;
 }
 
-// within a container, align items in the center
 .align-center {
 	justify-content: center;
 }
@@ -314,7 +312,7 @@ blockquote {
 	position: absolute;
 	left: 50%;
 	top: auto;
-	transform: translatey(-50%);
+	transform: translateX(-50%);
 }
 
 // Vertically centers the element
@@ -322,13 +320,13 @@ blockquote {
 	position: absolute;
 	left: auto;
 	top: 50%;
-	transform: translatex(-50%);
+	transform: translateY(-50%);
 }
 
 // Abolutely centers the element
 .absolute-center {
 	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
